# facedetection

./: .gitignore  CMakeLists.txt  main.cpp  webcam.py  webcam_cv3.py
